name:                haskell-zoo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-zoo#readme
license:             BSD3
license-file:        LICENSE
author:              Juan Paucar
maintainer:          me@juancarlos.io
copyright:           2018 Juan Paucar
category:            Other
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  exposed-modules:     Basic.Sample
  default-language:    Haskell2010
  build-depends:       base               >= 4.8 && < 5.0

executable haskell-zoo
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskell-zoo
