name:                haskell-zoo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-zoo#readme
license:             BSD3
license-file:        LICENSE
author:              Juan Paucar
maintainer:          me@juancarlos.io
copyright:           2018 Juan Paucar
category:            Other
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  exposed-modules:     Basic.Sample
                     , AsyncExceptions.Sample
                     , Catch.Sample
                     , MonoidAndSemigroup.Sample
                     , Traversable.Sample
                     , ParMonad.Sample
                     , Eval.Sample
                     , RankNTypes.Sample
                     , Vector.Sample
  default-language:    Haskell2010
  build-depends:       base               >= 4.7 && < 5.0
                     , async
                     , bytestring
                     , exceptions
                     , HTTP
                     , monad-par
                     , mtl
                     , parallel
                     , random
                     , semigroups
  ghc-options:         -threaded -rtsopts -eventlog
                     

executable haskell-zoo
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskell-zoo
                     , monad-par
                     , parallel
  ghc-options:         -threaded -rtsopts -eventlog

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec
  main-is:             Spec.hs
  other-modules:       MonoidAndSemigroup.SampleSpec
                     , Traversable.SampleSpec
  build-depends:       base               >= 4.7 && < 5.0
                     , haskell-zoo
                     , hspec
                     , QuickCheck
                     , semigroups
                     , transformers
  default-language:    Haskell2010

benchmark bench-builder-all
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benchmark
  main-is:          unboxed.hs
  build-depends:    base
                  , criterion
                  , ghc-prim
  ghc-options:      -O2
